Backport Shiny to Platinum localization changes

--- a/src/main/resources/assets/thermalfoundation/lang/en_US.lang
+++ b/src/main/resources/assets/thermalfoundation/lang/en_US.lang
@@ -77,7 +77,7 @@ item.thermalfoundation.material.dustTin.name=Pulverized Tin
 item.thermalfoundation.material.dustSilver.name=Pulverized Silver
 item.thermalfoundation.material.dustLead.name=Pulverized Lead
 item.thermalfoundation.material.dustNickel.name=Pulverized Ferrous Metal
-item.thermalfoundation.material.dustPlatinum.name=Pulverized Shiny Metal
+item.thermalfoundation.material.dustPlatinum.name=Pulverized Platinum
 item.thermalfoundation.material.dustMithril.name=Pulverized Mana Infused Metal
 item.thermalfoundation.material.dustElectrum.name=Electrum Blend
 item.thermalfoundation.material.dustInvar.name=Invar Blend
@@ -91,7 +91,7 @@ item.thermalfoundation.material.ingotTin.name=Tin Ingot
 item.thermalfoundation.material.ingotSilver.name=Silver Ingot
 item.thermalfoundation.material.ingotLead.name=Lead Ingot
 item.thermalfoundation.material.ingotNickel.name=Ferrous Ingot
-item.thermalfoundation.material.ingotPlatinum.name=Shiny Ingot
+item.thermalfoundation.material.ingotPlatinum.name=Platinum Ingot
 item.thermalfoundation.material.ingotMithril.name=Mana Infused Ingot
 item.thermalfoundation.material.ingotElectrum.name=Electrum Ingot
 item.thermalfoundation.material.ingotInvar.name=Invar Ingot
@@ -105,7 +105,7 @@ item.thermalfoundation.material.nuggetTin.name=Tin Nugget
 item.thermalfoundation.material.nuggetSilver.name=Silver Nugget
 item.thermalfoundation.material.nuggetLead.name=Lead Nugget
 item.thermalfoundation.material.nuggetNickel.name=Ferrous Nugget
-item.thermalfoundation.material.nuggetPlatinum.name=Shiny Nugget
+item.thermalfoundation.material.nuggetPlatinum.name=Platinum Nugget
 item.thermalfoundation.material.nuggetMithril.name=Mana Infused Nugget
 item.thermalfoundation.material.nuggetElectrum.name=Electrum Nugget
 item.thermalfoundation.material.nuggetInvar.name=Invar Nugget
@@ -125,7 +125,7 @@ item.thermalfoundation.material.gearTin.name=Tin Gear
 item.thermalfoundation.material.gearSilver.name=Silver Gear
 item.thermalfoundation.material.gearLead.name=Lead Gear
 item.thermalfoundation.material.gearNickel.name=Ferrous Gear
-item.thermalfoundation.material.gearPlatinum.name=Shiny Gear
+item.thermalfoundation.material.gearPlatinum.name=Platinum Gear
 item.thermalfoundation.material.gearMithril.name=Mana Infused Gear
 item.thermalfoundation.material.gearElectrum.name=Electrum Gear
 item.thermalfoundation.material.gearInvar.name=Invar Gear
@@ -181,10 +181,10 @@ item.thermalfoundation.armor.invarPlate.name=Invar Chestplate
 item.thermalfoundation.armor.invarLegs.name=Invar Leggings
 item.thermalfoundation.armor.invarBoots.name=Invar Boots
 
-item.thermalfoundation.armor.platinumHelmet.name=Shiny Helmet
-item.thermalfoundation.armor.platinumPlate.name=Shiny Chestplate
-item.thermalfoundation.armor.platinumLegs.name=Shiny Leggings
-item.thermalfoundation.armor.platinumBoots.name=Shiny Boots
+item.thermalfoundation.armor.platinumHelmet.name=Platinum Helmet
+item.thermalfoundation.armor.platinumPlate.name=Platinum Chestplate
+item.thermalfoundation.armor.platinumLegs.name=Platinum Leggings
+item.thermalfoundation.armor.platinumBoots.name=Platinum Boots
 
 item.thermalfoundation.tool.copperSword.name=Copper Sword
 item.thermalfoundation.tool.copperShovel.name=Copper Shovel
@@ -266,15 +266,15 @@ item.thermalfoundation.tool.invarFishingRod.name=Invar Fishing Rod
 item.thermalfoundation.tool.invarSickle.name=Invar Sickle
 item.thermalfoundation.tool.invarBow.name=Invar Reinforced Bow
 
-item.thermalfoundation.tool.platinumSword.name=Shiny Sword
-item.thermalfoundation.tool.platinumShovel.name=Shiny Shovel
-item.thermalfoundation.tool.platinumPickaxe.name=Shiny Pickaxe
-item.thermalfoundation.tool.platinumAxe.name=Shiny Axe
-item.thermalfoundation.tool.platinumHoe.name=Shiny Hoe
-item.thermalfoundation.tool.platinumShears.name=Shiny Shears
-item.thermalfoundation.tool.platinumFishingRod.name=Shiny Fishing Rod
-item.thermalfoundation.tool.platinumSickle.name=Shiny Sickle
-item.thermalfoundation.tool.platinumBow.name=Shiny Reinforced Bow
+item.thermalfoundation.tool.platinumSword.name=Platinum Sword
+item.thermalfoundation.tool.platinumShovel.name=Platinum Shovel
+item.thermalfoundation.tool.platinumPickaxe.name=Platinum Pickaxe
+item.thermalfoundation.tool.platinumAxe.name=Platinum Axe
+item.thermalfoundation.tool.platinumHoe.name=Platinum Hoe
+item.thermalfoundation.tool.platinumShears.name=Platinum Shears
+item.thermalfoundation.tool.platinumFishingRod.name=Platinum Fishing Rod
+item.thermalfoundation.tool.platinumSickle.name=Platinum Sickle
+item.thermalfoundation.tool.platinumBow.name=Platinum Reinforced Bow
 
 item.thermalfoundation.tool.woodShears.name=Wood Shears
 item.thermalfoundation.tool.woodSickle.name=Wood Sickle
@@ -323,7 +323,7 @@ tile.thermalfoundation.ore.tin.name=Tin Ore
 tile.thermalfoundation.ore.silver.name=Silver Ore
 tile.thermalfoundation.ore.lead.name=Lead Ore
 tile.thermalfoundation.ore.nickel.name=Ferrous Ore
-tile.thermalfoundation.ore.platinum.name=Shiny Ore
+tile.thermalfoundation.ore.platinum.name=Platinum Ore
 tile.thermalfoundation.ore.mithril.name=Mana Infused Ore
 
 tile.thermalfoundation.storage.copper.name=Copper Block
@@ -331,7 +331,7 @@ tile.thermalfoundation.storage.tin.name=Tin Block
 tile.thermalfoundation.storage.silver.name=Silver Block
 tile.thermalfoundation.storage.lead.name=Lead Block
 tile.thermalfoundation.storage.nickel.name=Ferrous Block
-tile.thermalfoundation.storage.platinum.name=Shiny Block
+tile.thermalfoundation.storage.platinum.name=Platinum Block
 tile.thermalfoundation.storage.mithril.name=Mana Infused Block
 tile.thermalfoundation.storage.electrum.name=Electrum Block
 tile.thermalfoundation.storage.invar.name=Invar Block
@@ -347,7 +347,7 @@ material.thermalfoundation.lead=Lead
 material.thermalfoundation.lead.ability=Heavy
 material.thermalfoundation.silver=Silver
 material.thermalfoundation.silver.ability=Shiny
-material.thermalfoundation.platinum=Shiny
+material.thermalfoundation.platinum=Platinum
 material.thermalfoundation.platinum.ability=Dense
 material.thermalfoundation.electrum=Electrum
 material.thermalfoundation.electrum.ability=Fancy
